--- a/src/main/resources/assets/mimosmod/lang/en_us.json
+++ b/src/main/resources/assets/mimosmod/lang/en_us.json
@@ -25,8 +25,8 @@
   "item.mimosmod.diamond_scythe": "Diamond Scythe",
   "item.mimosmod.daedalus_bow": "Daedalus Bow",
 
-  "item.mimosmod.encounter_record": "Music Disc",
-  "item.mimosmod.encounter_record.desc": "Mim0_ - encounter",
+  "item.mimosmod.encounter_music_disc": "Music Disc",
+  "item.mimosmod.encounter_music_disc.desc": "Mim0_ - encounter",
 
 
 
