--- a/src/main/resources/assets/mimosmod/lang/en_us.json
+++ b/src/main/resources/assets/mimosmod/lang/en_us.json
@@ -24,6 +24,11 @@
   "item.mimosmod.soulsteel_hoe": "Soulsteel Hoe",
   "item.mimosmod.diamond_scythe": "Diamond Scythe",
   "item.mimosmod.daedalus_bow": "Daedalus Bow",
+  "item.mimosmod.mystelite_helmet": "Mystelite Helmet",
+  "item.mimosmod.mystelite_chestplate": "Mystelite Chestplate",
+  "item.mimosmod.mystelite_leggings": "Mystelite Leggings",
+  "item.mimosmod.mystelite_boots": "Mystelite Boots",
+
 
   "item.mimosmod.encounter_music_disc": "Music Disc",
   "item.mimosmod.encounter_music_disc.desc": "Mim0_ - encounter",
