--- a/src/main/resources/assets/mimosmod/lang/en_us.json
+++ b/src/main/resources/assets/mimosmod/lang/en_us.json
@@ -23,6 +23,7 @@
   "item.mimosmod.soulsteel_shovel": "Soulsteel Shovel",
   "item.mimosmod.soulsteel_hoe": "Soulsteel Hoe",
   "item.mimosmod.diamond_scythe": "Diamond Scythe",
+  "item.mimosmod.mystelite_scythe": "Mystelite Scythe",
   "item.mimosmod.daedalus_bow": "Daedalus Bow",
   "item.mimosmod.mystelite_helmet": "Mystelite Helmet",
   "item.mimosmod.mystelite_chestplate": "Mystelite Chestplate",
