--- a/src/main/resources/assets/mimosmod/lang/de_de.json
+++ b/src/main/resources/assets/mimosmod/lang/de_de.json
@@ -31,7 +31,7 @@
   "item.mimosmod.mystelite_boots": "Mystelitstiefel",
 
 
-  "item.mimosmod.encounter_music_disc": "Schallplatte",
+  "item.mimosmod.encounter_music_disc": "§bSchallplatte§r",
   "item.mimosmod.encounter_music_disc.desc": "Mim0_ - encounter",
 
 
