--- a/src/main/resources/assets/mimosmod/lang/en_us.json
+++ b/src/main/resources/assets/mimosmod/lang/en_us.json
@@ -31,7 +31,7 @@
   "item.mimosmod.mystelite_boots": "Mystelite Boots",
 
 
-  "item.mimosmod.encounter_music_disc": "Music Disc",
+  "item.mimosmod.encounter_music_disc": "§bMusic Disc§r",
   "item.mimosmod.encounter_music_disc.desc": "Mim0_ - encounter",
 
 
