--- a/src/main/resources/assets/mimosmod/lang/en_us.json
+++ b/src/main/resources/assets/mimosmod/lang/en_us.json
@@ -101,6 +101,15 @@
   "creativetab.mimos_combat": "Mimo's Combat",
   "creativetab.mimos_food_and_drinks": "Mimo's Food & Drinks",
   "creativetab.mimos_ingredients": "Mimo's Ingredients",
-  "creativetab.mimos_mobs": "Mimo's Mobs"
+  "creativetab.mimos_mobs": "Mimo's Mobs",
 
+
+
+
+
+
+
+
+
+  "block.mimosmod.cherry_delphinium": "Cherry Delphinium"
 }
