--- a/src/main/resources/assets/mimosmod/lang/en_us.json
+++ b/src/main/resources/assets/mimosmod/lang/en_us.json
@@ -111,5 +111,11 @@
 
 
 
-  "block.mimosmod.cherry_delphinium": "Cherry Delphinium"
+  "block.mimosmod.cherry_delphinium": "Cherry Delphinium",
+  "item.mimosmod.cucumber_seeds": "Cucumber Seeds",
+  "item.mimosmod.red_parrot_feather": "Red Parrot Feather",
+  "item.mimosmod.green_parrot_feather": "Green Parrot Feather",
+  "item.mimosmod.blue_parrot_feather": "Blue Parrot Feather",
+  "item.mimosmod.cyan_parrot_feather": "Cyan Parrot Feather",
+  "item.mimosmod.gray_parrot_feather": "Gray Parrot Feather"
 }
