--- a/src/main/resources/assets/mimosmod/lang/en_us.json
+++ b/src/main/resources/assets/mimosmod/lang/en_us.json
@@ -111,7 +111,7 @@
 
 
 
-  "block.mimosmod.cherry_delphinium": "Cherry Delphinium",
+  "block.mimosmod.cherry_dahlia": "Cherry Dahlia",
   "item.mimosmod.cucumber_seeds": "Cucumber Seeds",
   "item.mimosmod.red_parrot_feather": "Red Parrot Feather",
   "item.mimosmod.green_parrot_feather": "Green Parrot Feather",
