--- a/src/main/resources/assets/mimosmod/lang/de_de.json
+++ b/src/main/resources/assets/mimosmod/lang/de_de.json
@@ -1,7 +1,7 @@
 {
   "item.mimosmod.azurite": "Azurit",
   "item.mimosmod.raw_azurite": "Rohazurit",
-  "item.mimosmod.arcane crystal": "Arkankristall",
+  "item.mimosmod.arcane_crystal": "Arkankristall",
   "item.mimosmod.celestial_shard": "Celestial Scherbe",
   "item.mimosmod.celestial": "Celestial",
   "item.mimosmod.pianite": "Pianit",
