--- a/src/main/resources/assets/mimosmod/lang/en_us.json
+++ b/src/main/resources/assets/mimosmod/lang/en_us.json
@@ -118,5 +118,6 @@
   "item.mimosmod.blue_parrot_feather": "Blue Parrot Feather",
   "item.mimosmod.cyan_parrot_feather": "Cyan Parrot Feather",
   "item.mimosmod.gray_parrot_feather": "Gray Parrot Feather",
-  "block.mimosmod.copper_lamp": "Copper Lamp"
+  "block.mimosmod.copper_lamp": "Copper Lamp",
+  "item.mimosmod.ice_bolt_runestone": "Ice Bolt Runestone"
 }
