--- a/src/main/resources/assets/mimosmod/lang/en_us.json
+++ b/src/main/resources/assets/mimosmod/lang/en_us.json
@@ -119,5 +119,6 @@
   "item.mimosmod.cyan_parrot_feather": "Cyan Parrot Feather",
   "item.mimosmod.gray_parrot_feather": "Gray Parrot Feather",
   "block.mimosmod.copper_lamp": "Copper Lamp",
-  "item.mimosmod.ice_bolt_runestone": "Ice Bolt Runestone"
+  "item.mimosmod.ice_bolt_runestone": "Ice Bolt Runestone",
+  "item.mimosmod.sapphire_beetle_spawn_egg": "Sapphire Beetle Spawn Egg"
 }
