--- a/src/main/resources/assets/mimosmod/lang/en_us.json
+++ b/src/main/resources/assets/mimosmod/lang/en_us.json
@@ -120,7 +120,7 @@
   "item.mimosmod.gray_parrot_feather": "Gray Parrot Feather",
   "block.mimosmod.copper_lamp": "Copper Lamp",
   "item.mimosmod.ice_bolt_runestone": "Ice Bolt Runestone",
-  "item.mimosmod.sapphire_beetle_spawn_egg": "Sapphire Beetle Spawn Egg",
+  "item.mimosmod.sapphire_beetle_spawn_egg": "Beetle Spawn Egg",
   "block.mimosmod.stardust_ore": "Stardust Ore",
   "block.mimosmod.deepslate_stardust_ore": "Deepslate Stardust Ore",
   "block.mimosmod.lumite_ore": "Lumite Ore",
